Today Working Progress 03/09/2024 * Adding some improved CSS * Project page UI CSS fixed https://prnt.sc/PwZSP3GaXIqn * Fixed sidebar menu caching problem * User avator not found fixed https://prnt.sc/sxWapkOkJMpU * Fixed profile menu dropdown item https://prnt.sc/IgbbBMmGFEc4 * Missing icon fixed https://prnt.sc/ijlhD8YiyAgM * Fixed project menu white space https://prnt.sc/Vo1vRxvh_z1g
Next Task:
* Fix tinymec
* Fix table pagination when filter on the projects table

+ Projects sidebar sub-menu to click to filter data table
+ Template message created https://prnt.sc/QcMmsCCdfjc8
+ Comments + Client feedback implemented with pre-message template

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -658,16 +658,6 @@ span.badge {
     background-position: center;
 }
 
-.fullsize-link {
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
 td.project-thumbnail.custom-thumbnail {
     height: 50px !important;
 }
